feat(boot): ModuleUnlocker — Unsafe-based self-open of java.base/java.nio (no JVM args needed)