@@ -1,6 +1,5 @@
 package me.xssmusashi.farsight.core.storage;
 
-import org.lmdbjava.ByteBufferProxy;
 import org.lmdbjava.Dbi;
 import org.lmdbjava.DbiFlags;
 import org.lmdbjava.Env;
@@ -41,10 +40,9 @@ public final class LmdbStorage implements AutoCloseable {
         } catch (Exception e) {
             throw new RuntimeException("failed to create storage dir: " + directory, e);
         }
-        // PROXY_SAFE uses only public ByteBuffer API — no reflection into
-        // java.nio.Buffer.address, so it works on JDK 16+ without the
-        // `--add-opens java.base/java.nio=ALL-UNNAMED` launcher flag.
-        this.env = Env.create(ByteBufferProxy.PROXY_SAFE)
+        // Module opens are handled by ModuleUnlocker at client init — lmdbjava's
+        // default ReflectiveProxy then works without any launcher flag.
+        this.env = Env.create()
                 .setMapSize(mapSize)
                 .setMaxDbs(4)
                 .setMaxReaders(128)
